--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    color: white;
 }
 
 :root {
@@ -17,6 +18,8 @@
 .navbar {
     display: flex;
     justify-content: flex-end;
+    padding: 2em;
+
 }
 
 /* para quitarle los puntos de lista y ponerlos en linea no en columna inicio, portafolio y 
@@ -35,7 +38,7 @@ y el margin es para que se separen entre inicio portafolio y sobre mi*/
     font-size: 1.5rem;
     padding: 10px;
     text-decoration: none;
-    color: white;
+    color: rgb(252, 250, 250);
     margin: 20px;
 }
 
@@ -121,7 +124,8 @@ y el margin es para que se separen entre inicio portafolio y sobre mi*/
 /* esto es para ponerle mi nombre y desarrollador web en el centro de la pagina*/
 
 .cuadro-texto{
-    font-size: 2rem;
+   
+    font-size: 1.5rem;
     color: var(--secondary);
     top: 380px;
     z-index: 11;
@@ -151,11 +155,12 @@ y el margin es para que se separen entre inicio portafolio y sobre mi*/
 /* esto es para que salgan los iconos*/
 
 .socialButton {
-
+    color: aliceblue;
     top: 450px;
     z-index: 11;
     /* text-decoration: none; es para que no salgan los iconos con subrayado*/
     text-decoration: none;
+    transition: transform 0.3;
     
 
 
@@ -165,8 +170,19 @@ y el margin es para que se separen entre inicio portafolio y sobre mi*/
 width: 40px;
 margin: 0 10px;
 
-
+/*  esto es para que cuando se ponga el mouse sobre el icono el icono 
+se haga grande
 }
+.socialButton a hover{
+    transform: scale(1.4);
 
+
+} */
+
+.about-img{
+    display: grid;
+    height: 50px;
+    width: 50px;
+}
 
 
